Fix: Optimización de Links e imágenes para SEO

--- a/contacto.html
+++ b/contacto.html
@@ -24,14 +24,14 @@
   <a class="u-skip-link" href="#contenido-principal">Saltar al contenido principal</a>
   <header class="header" role="banner">
     <div class="header__container">
-      <a href="index.html" class="header__logo" aria-label="Ir a inicio">
+      <a href="index.html" class="header__logo" aria-label="Ir al inicio">
         <img src="assets/img/bytehause-logo.svg" alt="Logotipo de empresa ByteHause" />
       </a>
       <nav class="nav" aria-label="Navegación principal">
         <ul class="nav__list">
-          <li class="nav__item"><a class="nav__link" href="index.html">Inicio</a></li>
-          <li class="nav__item"><a class="nav__link" href="acerca.html">Acerca</a></li>
-          <li class="nav__item"><a class="nav__link nav__link--active" href="contacto.html" aria-current="page">Contacto</a></li>
+          <li class="nav__item"><a class="nav__link" href="index.html" aria-label="Ir al inicio">Inicio</a></li>
+          <li class="nav__item"><a class="nav__link" href="acerca.html" aria-label="Ir a la sección de acerca">Acerca</a></li>
+          <li class="nav__item"><a class="nav__link nav__link--active" href="contacto.html" aria-current="page" aria-label="Ir a la sección de contacto>Contacto</a></li>
         </ul>
       </nav>
     </div>
@@ -79,8 +79,8 @@
       <span class="footer__credits">&copy; 2025 Soluciones Software. Desarrollado por ByteHause.</span>
       <nav class="footer__nav" aria-label="Navegación de pie de página">
         <ul class="footer__list">
-          <li class="footer__item"><a class="footer__link" href="acerca.html">Acerca</a></li>
-          <li class="footer__item"><a class="footer__link" href="contacto.html">Contacto</a></li>
+          <li class="footer__item"><a class="footer__link" href="acerca.html" aria-label="Ir a la sección de acerca">Acerca</a></li>
+          <li class="footer__item"><a class="footer__link" href="contacto.html" aria-label="Ir a la sección de contacto">Contacto</a></li>
         </ul>
       </nav>
     </div>
