--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
   <a class="u-skip-link" href="#contenido-principal">Saltar al contenido principal</a>
   <header class="header" role="banner">
     <div class="header__container">
-      <a href="index.html" class="header__logo" aria-label="Ir a inicio">
+      <a href="index.html" class="header__logo" aria-label="Ir al inicio">
         <img src="assets/img/bytehause-logo.svg" alt="Logotipo de empresa ByteHause" />
       </a>
       <nav class="nav" aria-label="Navegación principal">
         <ul class="nav__list">
-          <li class="nav__item"><a class="nav__link nav__link--active" href="index.html" aria-current="page">Inicio</a></li>
-          <li class="nav__item"><a class="nav__link" href="acerca.html">Acerca</a></li>
-          <li class="nav__item"><a class="nav__link" href="contacto.html">Contacto</a></li>
+          <li class="nav__item"><a class="nav__link nav__link--active" href="index.html" aria-current="page" aria-label="Ir al inicio">Inicio</a></li>
+          <li class="nav__item"><a class="nav__link" href="acerca.html" aria-current="Ir a la sección de acerca" >Acerca</a></li>
+          <li class="nav__item"><a class="nav__link" href="contacto.html" aria-current="Ir a la sección de contacto" >Contacto</a></li>
         </ul>
       </nav>
     </div>
@@ -80,7 +80,7 @@
       <ul class="services__list">
         <li class="services__item">
           <div class="card">
-            <img class="card__image" src="assets/img/el-desarrollo-web.webp" alt="Desarrollo web personalizado" loading="lazy" />
+            <img class="card__image" src="assets/img/desarrollo-web-personalizado.webp" alt="Desarrollo web personalizado" loading="lazy" />
             <div class="card__body">
               <h3 class="card__title">Desarrollo Web</h3>
               <p class="card__description">Sitios y aplicaciones web modernas para potenciar tu presencia digital.</p>
@@ -89,7 +89,7 @@
         </li>
         <li class="services__item">
           <div class="card">
-            <img class="card__image" src="assets/img/Alignminds.png" alt="Aplicaciones móviles" loading="lazy" />
+            <img class="card__image" src="assets/img/aplicaciones-moviles.png" alt="Aplicaciones móviles" loading="lazy" />
             <div class="card__body">
               <h3 class="card__title">Aplicaciones Móviles</h3>
               <p class="card__description">Aplicaciones nativas y multiplataforma para iOS y Android.</p>
@@ -98,7 +98,7 @@
         </li>
         <li class="services__item">
           <div class="card">
-            <img class="card__image" src="assets/img/servicio_mantenimiento.jpg" alt="Soporte y mantenimiento de software" loading="lazy" />
+            <img class="card__image" src="assets/img/soporte-mantenimiento-software.jpg" alt="Soporte y mantenimiento de software" loading="lazy" />
             <div class="card__body">
               <h3 class="card__title">Soporte y Mantenimiento</h3>
               <p class="card__description">Aseguramos el funcionamiento óptimo y seguridad de tus sistemas.</p>
@@ -112,7 +112,7 @@
   <h2 id="nuestro-equipo-id" class="team__title">Nuestro Equipo</h2>
   <div class="team__profile-list">
     <article class="team__profile">
-      <img class="team__photo" src="assets/img/ux-designer-maria.jpg" alt="María López, diseñadora UX/UI" loading="lazy" />
+      <img class="team__photo" src="assets/img/maria-lopez-disenadora-ux-ui.jpg" alt="María López, diseñadora UX/UI" loading="lazy" />
       <div class="team__profile-body">
         <h3 class="team__profile-name">María López</h3>
         <p class="team__profile-role"><span lang="en">UX/UI Designer</span></p>
@@ -121,7 +121,7 @@
     </article>
 
     <article class="team__profile">
-      <img class="team__photo" src="assets/img/frontend-developer-carlos.jpg" alt="Carlos Méndez, desarrollador frontend" loading="lazy" />
+      <img class="team__photo" src="assets/img/carlos-mendez-desarrollador-frontend.jpg" alt="Carlos Méndez, desarrollador frontend" loading="lazy" />
       <div class="team__profile-body">
         <h3 class="team__profile-name">Carlos Méndez</h3>
         <p class="team__profile-role">Frontend Developer</p>
@@ -130,7 +130,7 @@
     </article>
 
     <article class="team__profile">
-      <img class="team__photo" src="assets/img/seo-ana.webp" alt="Ana Torres, especialista en accesibilidad" loading="lazy" />
+      <img class="team__photo" src="assets/img/ana-torres-especialista-accesibilidad.webp" alt="Ana Torres, especialista en accesibilidad" loading="lazy" />
       <div class="team__profile-body">
         <h3 class="team__profile-name">Ana Torres</h3>
         <p class="team__profile-role">Accesibilidad & SEO</p>
