--- a/acerca.html
+++ b/acerca.html
@@ -29,9 +29,9 @@
       </a>
       <nav class="nav" aria-label="Navegación principal">
         <ul class="nav__list">
-          <li class="nav__item"><a class="nav__link" href="index.html">Inicio</a></li>
-          <li class="nav__item"><a class="nav__link nav__link--active" href="acerca.html" aria-current="page">Acerca</a></li>
-          <li class="nav__item"><a class="nav__link" href="contacto.html">Contacto</a></li>
+          <li class="nav__item"><a class="nav__link" href="index.html" aria-label="Ir al inicio">Inicio</a></li>
+          <li class="nav__item"><a class="nav__link nav__link--active" href="acerca.html" aria-current="page" aria-label="Ir a la sección de acerca">Acerca</a></li>
+          <li class="nav__item"><a class="nav__link" href="contacto.html" aria-label="Ir a la sección de contacto">Contacto</a></li>
         </ul>
       </nav>
     </div>
@@ -65,7 +65,7 @@
       <h2 id="equipo-id" class="team__title">Nuestro Equipo</h2>
       <div class="team__profile-list">
         <article class="team__profile" data-aos="fade-up" data-aos-delay="50">
-          <img src="assets/img/ux-designer-maria.jpg" alt="Ana - CEO y Lider Técnica" class="team__photo" />
+          <img src="assets/img/maria-lopez-disenadora-ux-ui.jpg" alt="María López, diseñadora UX/UI" class="team__photo" />
           <div class="team__profile-body">
             <h3 class="team__profile-name">María López</h3>
             <p class="team__profile-role">UX/UI Designer</p>
@@ -73,7 +73,7 @@
           </div>
         </article>
         <article class="team__profile" data-aos="fade-up" data-aos-delay="100">
-          <img src="assets/img/frontend-developer-carlos.jpg" alt="Luis - Developer FullStack" class="team__photo" />
+          <img src="assets/img/carlos-mendez-desarrollador-frontend.jpg" alt="Carlos Méndez, desarrollador frontend" class="team__photo" />
           <div class="team__profile-body">
             <h3 class="team__profile-name">Carlos Méndez</h3>
             <p class="team__profile-role">Frontend Developer</p>
@@ -81,7 +81,7 @@
           </div>
         </article>
         <article class="team__profile" data-aos="fade-up" data-aos-delay="150">
-          <img src="assets/img/seo-ana.webp" alt="Sofía - UX/UI Designer" class="team__photo" />
+          <img src="assets/img/ana-torres-especialista-accesibilidad.webp" alt="Ana Torres, especialista en accesibilidad" class="team__photo" />
           <div class="team__profile-body">
             <h3 class="team__profile-name">Ana Torres</h3>
             <p class="team__profile-role">Accesibilidad & SEO</p>
@@ -102,7 +102,7 @@
           </div>
         </article>
         <article class="portfolio__item" data-aos="flip-left" data-aos-delay="100">
-          <img class="portfolio__image" src="assets/img/app-aplicacion-Logistiko.webp" alt="App móvil para logística" />
+          <img class="portfolio__image" src="assets/img/aplicaciones-moviles.png" alt="App móvil para logística" />
           <div class="portfolio__body">
             <h3 class="portfolio__item-title">App Móvil Logística 360</h3>
             <p class="portfolio__description">Aplicación Flutter para gestión y seguimiento en tiempo real de flotas para una empresa líder de transporte.</p>
