--- a/contacto.html
+++ b/contacto.html
@@ -31,7 +31,7 @@
         <ul class="nav__list">
           <li class="nav__item"><a class="nav__link" href="index.html" aria-label="Ir al inicio">Inicio</a></li>
           <li class="nav__item"><a class="nav__link" href="acerca.html" aria-label="Ir a la sección de acerca">Acerca</a></li>
-          <li class="nav__item"><a class="nav__link nav__link--active" href="contacto.html" aria-current="page" aria-label="Ir a la sección de contacto>Contacto</a></li>
+          <li class="nav__item"><a class="nav__link nav__link--active" href="contacto.html" aria-current="page" aria-label="Ir a la sección de contacto">Contacto</a></li>
         </ul>
       </nav>
     </div>
