Feature: Implementación de HTML nueva tarjeta rellenando el espacio vacio con información

--- a/index.html
+++ b/index.html
@@ -63,13 +63,19 @@
         <article class="features__card" data-aos="zoom-in" data-aos-delay="100">
           <h2 class="features__title">Equipo Experto</h2>
           <p class="features__description">
-            Ingenieros y desarrolladores expertos en backend, frontend y mobile.
+            Ingenieros y desarrolladores expertos en frontend y mobile.
           </p>
         </article>
         <article class="features__card" data-aos="zoom-in" data-aos-delay="150">
           <h2 class="features__title">Soporte Personalizado</h2>
           <p class="features__description">
             Acompañamiento y soporte integral durante todo tu proyecto.
+          </p>
+        </article>
+        <article class="features__card" data-aos="zoom-in" data-aos-delay="150">
+          <h2 class="features__title">Resultados Confiables</h2>
+          <p class="features__description">
+            Entregamos proyectos a tiempo, optimizados para SEO, accesibilidad y escalabilidad, asegurando un impacto real en tu negocio. 
           </p>
         </article>
       </div>
