HotFix: Corrección del nombre de la empresa

--- a/acerca.html
+++ b/acerca.html
@@ -7,13 +7,13 @@
   <title>Acerca de Soluciones Software | Tu socio tecnológico</title>
   <meta name="description" content="Conoce nuestro equipo de expertos, valores, misión y visión. Creemos en la tecnología que transforma empresas y personas.">
   <meta name="keywords" content="empresa software, sobre nosotros, equipo, valores, misión, visión, innovación">
-  <link rel="canonical" href="https://www.tusitio.com/acerca.html" />
+  <link rel="canonical" href="https://www.fernyxnx.github.io/Proyecto-2/acerca.html" />
 
   <!-- Open Graph -->
   <meta property="og:title" content="Acerca de Soluciones Software" />
   <meta property="og:type" content="website" />
   <meta property="og:description" content="Conoce al equipo y nuestros valores." />
-  <meta property="og:url" content="https://www.tusitio.com/acerca.html" />
+  <meta property="og:url" content="https://fernyxnx.github.io/Proyecto-2/acerca.html" />
   <meta property="og:image" content="assets/img/og-image.jpg" />
 
   <link rel="stylesheet" href="assets/css/main.css">
@@ -39,7 +39,7 @@
   <main id="contenido-principal" class="main main--acerca" tabindex="-1">
     <section class="about" aria-label="Sobre la empresa">
       <h1 class="about__title">Acerca de Nosotros</h1>
-      <p class="about__intro">Somos Soluciones Software, tu aliado estratégico en la transformación digital de tu empresa. Más de 10 años simplificando y potenciando procesos con tecnología.</p>
+      <p class="about__intro">Somos ByteHause, tu aliado estratégico en la transformación digital de tu empresa. Más de 10 años simplificando y potenciando procesos con tecnología.</p>
       <div class="about__values">
         <article class="about__card" data-aos="fade-up">
           <h2 class="about__card-title">Misión</h2>
@@ -113,7 +113,7 @@
   </main>
   <footer class="footer" role="contentinfo">
     <div class="footer__container">
-      <span class="footer__credits">&copy; 2025 Soluciones Software. Desarrollado por ByteHause.</span>
+      <span class="footer__credits">&copy; 2025 Desarrollado por ByteHause.</span>
       <nav class="footer__nav" aria-label="Navegación de pie de página">
         <ul class="footer__list">
           <li class="footer__item"><a class="footer__link" href="acerca.html">Acerca</a></li>
