--- a/contacto.html
+++ b/contacto.html
@@ -7,13 +7,13 @@
   <title>Contacto | Soluciones Software</title>
   <meta name="description" content="Contáctanos para más información, presupuestos o una asesoría personalizada sobre el desarrollo de software para tu empresa.">
   <meta name="keywords" content="contacto, solicitar presupuesto, asesoría, servicios software, formulario">
-  <link rel="canonical" href="https://www.tusitio.com/contacto.html" />
+  <link rel="canonical" href="https://www.fernyxnx.github.io/Proyecto-2/acerca.html" />
 
   <!-- Open Graph -->
   <meta property="og:title" content="Contacto | Soluciones Software" />
   <meta property="og:type" content="website" />
   <meta property="og:description" content="Escríbenos para asesoría o información sobre nuestros servicios tecnológicos." />
-  <meta property="og:url" content="https://www.tusitio.com/contacto.html" />
+  <meta property="og:url" content="https://fernyxnx.github.io/Proyecto-2/acerca.html" />
   <meta property="og:image" content="assets/img/og-image.jpg" />
 
   <link rel="stylesheet" href="assets/css/main.css">
@@ -76,7 +76,7 @@
   </main>
   <footer class="footer" role="contentinfo">
     <div class="footer__container">
-      <span class="footer__credits">&copy; 2025 Soluciones Software. Desarrollado por ByteHause.</span>
+      <span class="footer__credits">&copy; 2025 Desarrollado por ByteHause.</span>
       <nav class="footer__nav" aria-label="Navegación de pie de página">
         <ul class="footer__list">
           <li class="footer__item"><a class="footer__link" href="acerca.html" aria-label="Ir a la sección de acerca">Acerca</a></li>
