--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <title>Soluciones Software a Medida | Tu socio tecnológico</title>
+  <title>Soluciones de Software a Medida | Tu socio tecnológico</title>
   <meta name="description" content="Empresa de servicios de desarrollo de software a medida. Impulsa tu negocio con soluciones web, móviles y soporte técnico de calidad.">
   <meta name="keywords" content="servicios de software, desarrollo web, aplicaciones móviles, soporte técnico, empresa, software a medida">
-  <link rel="canonical" href="https://www.tusitio.com/" />
+  <link rel="canonical" href="https://www.fernyxnx.github.io/Proyecto-2/index.html" />
 
   <!-- Open Graph -->
   <meta property="og:title" content="Soluciones Software a Medida | Tu socio tecnológico" />
   <meta property="og:type" content="website" />
   <meta property="og:description" content="Impulsa tu negocio con soluciones digitales innovadoras." />
-  <meta property="og:url" content="https://www.tusitio.com/" />
+  <meta property="og:url" content="https://fernyxnx.github.io/Proyecto-2/index.html" />
   <meta property="og:image" content="assets/img/og-image.jpg" />
 
   <!-- Estilos CSS compilado -->
@@ -150,7 +150,7 @@
 
   <footer class="footer" role="contentinfo">
     <div class="footer__container">
-      <span class="footer__credits">&copy; 2025 Soluciones Software. Desarrollado por ByteHause.</span>
+      <span class="footer__credits">&copy; 2025 Desarrollado por ByteHause.</span>
       <nav class="footer__nav" aria-label="Navegación de pie de página">
         <ul class="footer__list">
           <li class="footer__item"><a class="footer__link" href="acerca.html">Acerca</a></li>
